# tasbot-eyes-rust

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  roadmap.md  test_palette.json  test_palette.txt  test_playlist.json
src/: arguments.rs  color.rs  file_operations.rs  filesystem.rs  gif.rs  led.rs  logging.rs  main.rs  network.rs  renderer.rs  renderer_console.rs  tasbot.rs
src/renderer/: console.rs  led_matrix.rs  silent.rs  tasbot_eyes.rs
