[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.12.0"
#rs_ws281x = "0.4.4"
colored = "2"  # https://github.com/mackwic/colored
rand = "0.8.5"
tempdir = "0.3.7"  # just for testing, todo: is there a special dependecy type for
log = "0.4.17"