[package]
name = "project"
version = "0.1.0"
edition = "2021"
authors = ["Mirco Janisch <mirco.janisch@stud.h-da.de>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.12.0"
rs_ws281x = "0.4.4"     # https://github.com/rpi-ws281x/rpi-ws281x-rust
colored = "2"           # https://github.com/mackwic/colored
rand = "0.8.5"
log = "0.4.17"
thiserror = "1.0.38"
once_cell = "1.17.0"    # soon in std
ctrlc = "3.2.4"
clap = {version = "4.0.32", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]      # just for testing
cargo-edit = "0.11.7"
tempdir = "0.3.7"
